# RustedIronRing

./: Cargo.toml  README.md  ffi_tests.py
bindings/python/: .Cargo.toml.swo  Cargo.toml  example.py
bindings/python/src/: lib.rs
res/: namefile.txt
scripts/: kf4-group-sounds.py  patch.py
src/: lib.rs  main.rs  name_hashes.rs
src/formats/: bhf.rs  bnd.rs  common.rs  dat.rs  dcx.rs  errors.rs  param.rs  paramdef.rs
src/parsers/: bhd.rs  bhf.rs  bnd.rs  common.rs  dat.rs  dcx.rs  param.rs  paramdef.rs
src/repackers/: dat.rs  dcx.rs  errors.rs
src/unpackers/: bhd.rs  bhf.rs  bnd.rs  dat.rs  dcx.rs  errors.rs  param.rs  paramdef.rs
src/utils/: bin.rs  ffi.rs  fs.rs  str.rs
