[package]
name = "rusted_iron_ring"
version = "0.1.0"
authors = ["Dece <shgck@pistache.land>"]
edition = "2018"

[lib]
name = "rir"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "ironring"

[dependencies]
clap = "2.33"
encoding_rs = "0.8"
flate2 = "1.0"
libc = "0.2"
nom = "5"
num-bigint = "0.2"
num-traits = "0.2"
